--- a/InstructorCourses/src/main/resources/application.properties
+++ b/InstructorCourses/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/course_manager?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password   ------>edw vazeis toys kwdikoys apo to workbench soy
+spring.datasource.password=pliroforiki1401
+
