--- a/InstructorCourses/src/main/resources/application.properties
+++ b/InstructorCourses/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/course_manager?useSSL=false&se
 spring.datasource.username=root
 spring.datasource.password=pliroforiki1401
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
