--- a/InstructorCourses/src/main/resources/application.properties
+++ b/InstructorCourses/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/course_manager?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=pliroforiki1401
+spring.datasource.password=ZagLax2022
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
